# compasseconomy

./: .gitignore  .npmrc  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
data/: schedules_CPZ_2026-07-02_0052Z.csv
docs/: pax-boarding-logic.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  simconnect_bridge.rs
src/components/: Acars.tsx  AdminPanel.tsx  AirportDetailModal.tsx  Analytics.tsx  AppUpdater.tsx  AuthPage.tsx  CapacityChecker.tsx  Dashboard.tsx  Dispatch.tsx  Finances.tsx  Fleet.tsx  Gates.tsx  LiveMap.tsx  RouteNetwork.tsx  RoutePlanner.tsx  SearchableSelect.tsx  SimBriefModal.tsx  SimConnectIndicator.tsx  UserManagement.tsx
src/lib/: checklists.ts  coastlines.ts  supabase.ts  tauri-bridge.ts  types.ts
supabase/migrations/: 20260702005636_create_pax_demand_system.sql  20260702010457_fix_handle_new_user_search_path.sql  20260702010704_grant_auth_admin_public_access.sql  20260702011049_allow_auth_admin_rls_bypass.sql  20260702011253_drop_fk_to_auth_users.sql  20260702022404_create_auto_demand_generation.sql  20260702032827_create_flight_bookings.sql  20260702033604_protect_booked_pax_from_generation_cleanup.sql  20260702044507_create_aircraft_fleet.sql  20260702044528_create_gates.sql  20260702045803_create_airline_economy.sql  20260702192421_add_admin_update_profiles_policy.sql  20260703142329_add_admin_update_financial_transactions.sql  20260703232746_add_gate_hourly_billing_support.sql  20260704004844_create_acars_flights.sql  (+13 more)
(+7 files in other folders)
